# ComfyUI_FaceShaper

./: FaceSwapExample.json  README.md  __init__.py  pyproject.toml  requirements.txt  workflow.json
liveportrait/utils/: crop.py  cropper.py
