[project]
name = "comfyui_faceshaper"
description = "Nodes:Match two faces' shape before using other face swap nodes\nFace-swapping tools typically only replace facial features during the swap, without altering the facial shape. When there is a significant difference in facial shape between the target person and the person in the original photo, the result of the face swap is less satisfactory.\nThis project is a small script that can first liquefy and stretch the face in the original photo according to the horizontal and vertical proportions of the target person's facial contour. The resulting image can be used as input for other face-swapping nodes."
version = "1.0.0"
license = {file = "LICENSE"}
dependencies = ["opencv-python", "dlib"]

[project.urls]
Repository = "https://github.com/fssorc/ComfyUI_FaceShaper"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "ComfyUI_FaceShaper"
Icon = ""
